Allow jobs to be cancelled

--- a/templates/job.html
+++ b/templates/job.html
@@ -2,10 +2,12 @@
 <div>
 	<div>Status:</div>
 	<div>
-{{if eq .Status 0}}<span class="pending">Pending</span>{{end}}
-{{if eq .Status 1}}<span class="success">Success</span>{{end}}
-{{if eq .Status 2}}<span class="error">Error</span>{{end}}
-{{if eq .Status 3}}<span class="executing">Executing</span>{{end}}
+        {{if eq .Status 0}}<span class="pending">Pending</span>{{end}}
+        {{if eq .Status 1}}<span class="executing">Executing</span> <a href="/cancel">cancel</a>{{end}}
+        {{if eq .Status 2}}<span class="success">Success</span>{{end}}
+        {{if eq .Status 3}}<span class="error">Error</span>{{end}}
+        {{if eq .Status 4}}<span class="error">Cancelled</span>{{end}}
+        {{if eq .Status 5}}<span class="error">Timed out</span>{{end}}
 	</div>
 </div>
 
