--- a/templates/header.html
+++ b/templates/header.html
@@ -25,6 +25,16 @@
 			user-select: none;
 		}
 
+		.section-toggle:checked + .section-label + .section-contents {
+			max-height: 100%;
+		}
+
+		.section-contents {
+			max-height: 0;
+			overflow: hidden;
+			transition: max-height .25s ease-in-out;
+		}
+
 		.pending {
 			color: #555;
 		}
