Add basic support for ANSI colors in output

--- a/templates/header.html
+++ b/templates/header.html
@@ -7,6 +7,7 @@
 		<meta http-equiv="refresh" content="5">
     {{ end }}
     <title>microci{{if .Title}} - {{.Title}}{{end}}</title>
+	<link rel="stylesheet" href="/css/ansi.css">
 	<style>
 		.log-contents {
 			font-family: monospace;
