--- a/templates/header.html
+++ b/templates/header.html
@@ -9,9 +9,11 @@
     <title>microci{{if .Title}} - {{.Title}}{{end}}</title>
 	<link rel="stylesheet" href="/css/ansi.css">
 	<link rel="stylesheet" href="/css/style.css">
+	<link rel="stylesheet" href="/css/solarized.css">
 </head>
 <body>
-
+<input type="checkbox" id="dark-toggle">
+<div class="wrap">
 <h2>microci</h2>
 <ul>
 	<li><a href="/projects">Projects</a></li>
