--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,9 +4,13 @@ body, html {
     width: 100%;
 }
 
-.wrap {
+.contents {
     padding: 8px;
+}
+
+.wrap {
     min-height: calc(100vh - 16px);
+    width: 100%;
 }
 
 #dark-toggle {
@@ -48,4 +52,30 @@ body, html {
     white-space: pre;
     overflow: hidden;
     transition: max-height .25s ease-in-out;
+}
+
+
+/* Header */
+.navbar {
+    width: 100%;
+    min-height: 30px;
+    padding-top: 15px;
+}
+
+.navbar .title {
+    float: left;
+    font-size: 25px;
+    font-family: monospace;
+    line-height: 15px;
+    margin-left: 15px;
+}
+
+.navbar ul {
+    list-style: none;
+    margin: 0;
+}
+
+.navbar li {
+    float: left;
+    margin-left: 15px;
 }
