--- a/templates/header.html
+++ b/templates/header.html
@@ -14,8 +14,13 @@
 <body>
 <input type="checkbox" id="dark-toggle">
 <div class="wrap">
-<h2>microci</h2>
-<ul>
-	<li><a href="/projects">Projects</a></li>
-	<li><a href="/jobs/active">Active jobs</a></li>
-</ul>
+	<div class="navbar">
+		<div class="title">
+			microci
+		</div>
+		<ul>
+			<li><a href="/projects">Projects</a></li>
+			<li><a href="/jobs/active">Active jobs</a></li>
+		</ul>
+	</div>
+	<div class="contents">
