--- a/templates/job.html
+++ b/templates/job.html
@@ -1,4 +1,6 @@
 {{template "header.html" . }}
+<input type="checkbox" id="auto-scroll-toggle">
+<script lang="js" src="/js/job.js"></script>
 <h3>Job {{.Job.ID}}</h3>
 <div>
 	<div>Status:</div>
