--- a/templates/header.html
+++ b/templates/header.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="/css/solarized.css">
 </head>
 <body>
-<input type="checkbox" id="dark-toggle">
+<input type="checkbox" id="dark-toggle" checked>
 <div class="wrap">
 	<div class="navbar">
 		<div class="title">
